# ouroboros

./: .gitignore  BIBLE.md  CLAUDE.md  README.md  WORLD.md  ai-company  colab_bootstrap_shim.py  colab_launcher.py  prism_frontend_page_new.tsx
company/: README.md
company/vendor-lens/: Makefile  README.md  docker-compose.yml
company/vendor-lens/backend/: Dockerfile  pyproject.toml
company/vendor-lens/backend/app/: config.py  database.py  main.py  models.py  schemas.py  security.py
company/vendor-lens/backend/app/routers/: analysis.py  comparison.py  health.py
company/vendor-lens/backend/app/services/: analyzer.py  comparator.py  scraper.py
company/vendor-lens/frontend/: .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
docs/: BUDGET_STRATEGY.md  DISCOVERY_CRITERIA.md  INFRASTRUCTURE.md  ROADMAP.md  data.json  index.html
notebooks/: quickstart.ipynb
ops/: check.py
ouroboros/: __init__.py  agent.py  consciousness.py  context.py  llm.py  loop.py  memory.py  review.py  utils.py
ouroboros/memory/: episodic_memory.py
ouroboros/tools/: browser.py  control.py  dashboard.py  episodic_memory.py  evolution_stats.py  git.py  health.py  ops.py  registry.py  search.py  shell.py
prism-backend/: config.py  logging_config.py  main.py  security.py
prism-backend/tests/: test_main.py
prompts/: BASE.md  CONSCIOUSNESS.md  SYSTEM.md
supervisor/: __init__.py  events.py  git_ops.py  queue.py  state.py  telegram.py  workers.py
tests/: test_chat_lock.py  test_smoke.py  test_vps_integration.py
(+70 files in other folders)
